force-app/main/default/objects/Question_Master__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>