force-app/main/default/objects/Question_Master__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Clock</fullName>
            </value>
            <value>
                <fullName>Profit and Loss</fullName>
            </value>
            <value>
                <fullName>Compound Intereset</fullName>
            </value>
            <value>
                <fullName>Simple Intereset</fullName>
            </value>
            <value>
                <fullName>Problems on Ages</fullName>
            </value>
            <value>
                <fullName>Time and Distance</fullName>
            </value>
            <value>
                <fullName>Height and Distance</fullName>
            </value>
            <value>
                <fullName>Boats and Streams</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>DBMS</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>