force-app/main/default/objects/Question_Master__c/fields/Option_1__c.field-meta.xml
<CustomField>
    <fullName>Option_1__c</fullName>
    <label>Option 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>