force-app/main/default/objects/Question_Master__c/fields/Option_2__c.field-meta.xml
<CustomField>
    <fullName>Option_2__c</fullName>
    <label>Option 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>