force-app/main/default/objects/Question_Master__c/fields/Option_3__c.field-meta.xml
<CustomField>
    <fullName>Option_3__c</fullName>
    <label>Option 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>